k8s/server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-d
  namespace: fs-react-app
  labels:
    app: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: melvincv/fs-react-server
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: fs-react-app
  labels:
    app: server
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
