k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fs-react-app-ing
  namespace: fs-react-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: fsreact.mcv.in
    http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: client-svc
            port:
              number: 3000
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: server-svc
            port:
              number: 5000
